@@ -43,6 +43,12 @@ Tools/Demos
 - Issue #20142: Py_buffer variables generated by Argument Clinic are now
   initialized with a default value.
 
+Build
+-----
+
+- Issue #12837: Silence a tautological comparison warning on OS X under Clang in
+  socketmodule.c.
+
 What's New in Python 3.4.0 Beta 2?
 ==================================
 
